# DevilAgent

./: .gitignore  README.md  pyproject.toml
src/: 00.ipynb  main.py  server.py
src/skills/code-checker/: SKILL.md
src/skills/general-reviewer/: SKILL.md
src/skills/logic-auditor/: SKILL.md
