[project]
name = "DevilAgent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    # 验证
    "loguru==0.7.3",
    "ipykernel==7.1.0",
    "matplotlib==3.10.8",
    "pandas==2.2.3",
    "numpy==2.4.0",
    "python-dotenv==1.2.1",
    "datasets==4.4.2",
    # 智能体
    "langchain==0.3.27",
    "langchain-core==0.3.80",
    "langchain-openai==0.3.32",
    "langchain-experimental==0.3.4",
    "litellm==1.74.3",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "ddgs==9.10.0",
]